# powder-forge

./: .gitignore  README.md  meson.build
build-wasm/: .gitignore  index.html  serve.py
build-wasm/functions/proxy/: [[path]].js
src/: PowderToy.cpp  PowderToySDL.cpp  PowderToySDL.h  SimulationConfig.h
src/graphics/: Graphics.cpp  Graphics.h  PixelScale.cpp  PixelScale.h  RasterDrawMethods.h  RasterDrawMethodsImpl.h  Renderer.cpp  Renderer.h  TrueTypeFont.cpp  TrueTypeFont.h  VideoBuffer.h  meson.build
src/gui/: Style.cpp
src/gui/console/: ConsoleView.cpp
src/gui/dialogues/: ConfirmPrompt.cpp  ErrorMessage.cpp  InformationMessage.cpp  SaveIDMessage.cpp  TextPrompt.cpp
src/gui/elementsearch/: ElementSearchActivity.cpp
src/gui/filebrowser/: FileBrowserActivity.cpp
src/gui/game/: GameModel.cpp  GameView.cpp  QuickOption.h  QuickOptions.cpp  ToolButton.cpp
src/gui/interface/: Appearance.cpp  Button.cpp  Checkbox.cpp  ContextMenu.cpp  DropDown.cpp  Engine.cpp  Label.cpp  ProgressBar.cpp  Slider.cpp  Textbox.cpp
src/gui/login/: LoginView.cpp
src/gui/options/: OptionsView.cpp
src/gui/preview/: PreviewView.cpp
src/gui/profile/: ProfileActivity.cpp
src/gui/render/: RenderView.cpp
src/gui/save/: LocalSaveActivity.cpp  ServerSaveActivity.cpp
src/gui/tags/: TagsView.cpp
src/simulation/: BuiltinGOL.h  SimulationData.cpp
src/simulation/elements/: ACEL.cpp  ACET.cpp  ACID.cpp  ALCH.cpp  ALGN.cpp  AMTR.cpp  ANAR.cpp  ARAY.cpp  ASPH.cpp  BASE.cpp  BCLN.cpp  BCOL.cpp  BGLA.cpp  BHOL.cpp  BIZR.cpp  BIZRG.cpp  BIZRS.cpp  BMTL.cpp  BOMB.cpp  BOYL.cpp  (+230 more)
(+18 files in other folders)
