graphics_files = files(
	'Gradient.cpp',
	'Graphics.cpp',
	'PixelScale.cpp',
	'RasterGraphics.cpp',
	'FontReader.cpp',
	'TrueTypeFont.cpp',
)
powder_graphics_files = files(
	'Renderer.cpp',
)

common_files += graphics_files
powder_files += powder_graphics_files
render_files += powder_graphics_files
